Bugfix: Align text under share images 'center'.

--- a/src/sass/modules/_share.scss
+++ b/src/sass/modules/_share.scss
@@ -94,6 +94,7 @@ $button-width: $share-image-width + ($share-image-border-width * 2);
     span {
       display: block;
       padding: $padding-small-vertical $padding-small-horizontal;
+      text-align: center;
     }
   }
 }
